# LUNARA_MediaPlayer_CPP_QT

./: CMakeLists.txt  dummyServer.py  main.py
src/: CMakeLists.txt
src/AppController/: App.cpp  App.hpp  CMakeLists.txt  main.cpp
src/Core/: CMakeLists.txt
src/Core/LoginAuthentication/: CMakeLists.txt  LoginAuthentication.cpp  LoginAuthentication.hpp
src/Theme/: CMakeLists.txt  Theme.qrc  ThemeManager.cpp  ThemeManager.hpp  defaultTheme.json
src/UI/: CMakeLists.txt
src/UI/Main/: main.qml
src/UI/Pages/: Login.qml  Upload.qml
